--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<a href="https://time.is/Poplar" id="time_is_link" rel="nofollow" style="font-size:36px">Time in Poplar:</a>
-<span id="Poplar_z716" style="font-size:36px"></span>
-<script src="//widget.time.is/en.js"></script>
-<script>
-time_is_widget.init({Poplar_z716:{template:"TIME<br>DATE<br>SUN", date_format:"dayname daynum/monthnum/yy", sun_format:"Sunrise: srhour:srminute Sunset: sshour:ssminute<br>Day length: dlhoursh dlminutesm", coords:"51.5111300,-0.0156500"}});
-</script>
+<div style="text-align:center;padding:1em 0;"> <h4><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/city/1642911"><span style="color:gray;">Current local time in</span><br />Jakarta, Indonesia</a></h4> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=small&timezone=Asia%2FJakarta" width="100%" height="90" frameborder="0" seamless></iframe> </div>
